Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 22, 2023


Rebased Defcon mediator class to use Daylon::TFastMessageMediator 
to get a little performance boost (although negligible at this point 
since we don't have many message IDs).

Smartbomb readout uses graphic bar (arcade match) instead of digit.

Human status readout consumes HumanCount messages directly 
instead of parent status widget doing it on its behalf.

Bug fix for hidden enemies problem in Yllabian dogfights.
Bug fix for terrain occluding player ship and humans.

Added CFPoint::IsValid to help catch NaN errors.

Pod intersection destroyed by smartbomb destroys 
all involved swarmers and doubles explosion debris.
If the intersection didn't exist, then the 
pods explode normally and release swarmers.

Added smart bomb radius factor preference to let 
the reach of the smart bomb shockwave be customizable.

Assign horizontal direction for pods to alternate 
between left/right instead of being chosen randomly, 
to avoid cases where a pod intersection forms by 
all the pods moving towards it from the same 
direction.

Code cleanup (enemy game object instantation).

Holding down Shift key while pressing Tab key will reverse 
selection direction in the mission picker screen. It will 
also navigate to the previous page in the Details screen.

Pod intersection timer message displayed.

"Smart bomb awarded" message appears when a smart bomb is gained.

"All mission targets destroyed" message now a permanent message 
instead of a normal message, so it remains displayed 
until the player exits the mission.

User messages now shown using GMessageMediator instead of 
directly invoking widget methods.

More code cleanup, "enemy" --> "gameobject", AdjustAbductionStates 
now HumanStates, etc.

Adjusted human animation to closer match stride to walking speed.
