@@ -1,7 +1,5 @@
 // Copyright 2023 Daylon Graphics Ltd. All Rights Reserved.
 
-// SpaceRox - an Atari Asteroids clone developed with Unreal Engine.
-
 
 #include "AnimSpriteCel.h"
 
