@@ -1,0 +1,6 @@
+#include "DaylonLogging.h"
+
+
+DEFINE_LOG_CATEGORY(LogDaylon);
+
+
