@@ -1,0 +1,8 @@
+// Copyright 2023 Daylon Graphics Ltd. All rights reserved.
+
+#pragma once
+
+#include "CoreMinimal.h"
+
+DECLARE_LOG_CATEGORY_EXTERN(LogDaylon, Log, All);
+
