@@ -5,13 +5,10 @@
 #include "CoreMinimal.h"
 #include "UMG/Public/Blueprint/WidgetTree.h"
 #include "UMG/Public/Components/Widget.h"
-//#include "UMG/Public/Components/Image.h"
 #include "UMG/Public/Components/CanvasPanel.h"
-//#include "UMG/Public/Components/CanvasPanelSlot.h"
 #include "DaylonWidgetUtils.generated.h"
 
 
-// DECLARE_LOG_CATEGORY_EXTERN(LogDaylon, Log, All);
 
 class UTextBlock;
 
@@ -21,21 +18,21 @@ namespace Daylon
 	extern UWidgetTree*  WidgetTree;
 	extern UCanvasPanel* RootCanvas;
 
-	DAYLONGRAPHICSLIBRARY_API void          SetWidgetTree                     (UWidgetTree* InWidgetTree);
-	DAYLONGRAPHICSLIBRARY_API UWidgetTree*  GetWidgetTree                     ();
-	DAYLONGRAPHICSLIBRARY_API void          SetRootCanvas                     (UCanvasPanel* InCanvas);
-	DAYLONGRAPHICSLIBRARY_API UCanvasPanel* GetRootCanvas                     ();
+	DAYLONGRAPHICSLIBRARY_API void          SetWidgetTree             (UWidgetTree* InWidgetTree);
+	DAYLONGRAPHICSLIBRARY_API UWidgetTree*  GetWidgetTree             ();
+	DAYLONGRAPHICSLIBRARY_API void          SetRootCanvas             (UCanvasPanel* InCanvas);
+	DAYLONGRAPHICSLIBRARY_API UCanvasPanel* GetRootCanvas             ();
 
-	DAYLONGRAPHICSLIBRARY_API FVector2D     GetWidgetPosition                 (const UWidget* Widget);
-	DAYLONGRAPHICSLIBRARY_API FVector2D     GetWidgetSize                     (const UWidget* Widget);
-	DAYLONGRAPHICSLIBRARY_API FVector2D     GetWidgetDirectionVector          (const UWidget* Widget);
-	DAYLONGRAPHICSLIBRARY_API void          Show                              (UWidget*, bool Visible = true);
-	DAYLONGRAPHICSLIBRARY_API void          Show                              (SWidget*, bool Visible = true);
-	DAYLONGRAPHICSLIBRARY_API void          Hide                              (UWidget* Widget);
-	DAYLONGRAPHICSLIBRARY_API void          Hide                              (SWidget* Widget);
-	DAYLONGRAPHICSLIBRARY_API void          UpdateRoundedReadout              (UTextBlock* Readout, float Value, int32& OldValue);
+	DAYLONGRAPHICSLIBRARY_API FVector2D     GetWidgetPosition         (const UWidget* Widget);
+	DAYLONGRAPHICSLIBRARY_API FVector2D     GetWidgetSize             (const UWidget* Widget);
+	DAYLONGRAPHICSLIBRARY_API FVector2D     GetWidgetDirectionVector  (const UWidget* Widget);
+	DAYLONGRAPHICSLIBRARY_API void          Show                      (UWidget*, bool Visible = true);
+	DAYLONGRAPHICSLIBRARY_API void          Show                      (SWidget*, bool Visible = true);
+	DAYLONGRAPHICSLIBRARY_API void          Hide                      (UWidget* Widget);
+	DAYLONGRAPHICSLIBRARY_API void          Hide                      (SWidget* Widget);
+	DAYLONGRAPHICSLIBRARY_API void          UpdateRoundedReadout      (UTextBlock* Readout, float Value, int32& OldValue);
 
-	// ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+	// ----------------------------------------------------------------------------------------------------------------------------
 
 	template<class WidgetT> static WidgetT* MakeWidget()
 	{
@@ -44,7 +41,7 @@ namespace Daylon
 		return Widget;
 	}
 
-	// ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+	// ----------------------------------------------------------------------------------------------------------------------------
 
 	UENUM()
 	enum class EListNavigationDirection : int32
@@ -54,7 +51,7 @@ namespace Daylon
 		Forwards  =  1,
 	};
 
-	// ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+	// ----------------------------------------------------------------------------------------------------------------------------
 	
 	UENUM()
 	enum class ERotationDirection : int32
