@@ -2,7 +2,18 @@ Bug list for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-September 22, 2023
+September 23, 2023
+
+
+After several messages appeared, the message log stopped 
+deleting them, just letting them be in a frozen pile.
+Adding more messages didn't "wake up" the log. 
+Intermittent, unable to repro on second playthru.
+
+Two spacehums at the end of a first mission 
+were stationary, merely vibrating in place.
+No matter how low the XP is when a spachum is spawned, 
+it should have some hunting speed.
 
 
 FIXED: CFlak can have NaN orientation.fwd.
