@@ -2,8 +2,13 @@ Change log for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-September 22, 2023
+September 23, 2023
 
+
+Game object IDs are generated by IMission instead of using static vars.
+IMission ctor resets next ID to zero.
+
+Synced to plugin to fix build issues.
 
 Rebased Defcon mediator class to use Daylon::TFastMessageMediator 
 to get a little performance boost (although negligible at this point 
